# awscdk-minecraft-hack

./: .gitignore  README.md  minecraft.code-workspace
awscdk-minecraft/: Makefile  app.py  pyproject.toml  run.sh
awscdk-minecraft/src/cdk_minecraft/: paas_stack.py  server_deployer.py
minecraft-paas-server-iac/: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yaml  pyproject.toml
minecraft-paas-server-iac/resources/: user-data.template.sh
minecraft-paas-server-iac/sample-server/: docker-compose.yaml
minecraft-paas-server-iac/src/minecraft_server/: minecraft_server_stack.py
